# market-signal-mlops

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: ci.yml
data/fixtures/: market_bars.csv  market_bars_sample.csv
docs/: ADR-001-repo-boundary.md  ARCHITECTURE.md  DATA_CONTRACT.md
src/market_signal_mlops/contracts/: schemas.py
src/market_signal_mlops/features/: __init__.py  basic_features.py  feature_builder.py
src/market_signal_mlops/validation/: feature_snapshots.py  market_bars.py
tests/unit/: test_basic_features.py  test_feature_builder.py  test_feature_snapshot_contract.py  test_market_bar_contract.py
